<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyBlue"
    tools:context=".LandingScreenActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mainHeading"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/weather_update"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/hint"
            android:iconifiedByDefault="false"
            />
        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/mainScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"/>

</LinearLayout>